--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,17 @@
 services:
-  db_hidralpress:
-    container_name: 'db_hidralpress'
-    image: mysql:8.0.32
-    ports:
-      - '3306:3306'
+  db:
+    image: postgres:latest
+    user: postgres
     environment:
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-    volumes:
-      - 'db_hidralpress:/var/lib/mysql'
-    command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
+      POSTGRES_PASSWORD: "1234"
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready", "-d", "postgres"]
+      interval: 30s
+      timeout: 60s
+      retries: 5
+      start_period: 80s
   api:
     container_name: 'api'
     build: .
@@ -19,18 +20,17 @@ services:
              python manage.py runserver 0.0.0.0:8000"
     volumes:
       - '.:/hidralpress'
-    environment:
-      DEBUG: ${DEBUG}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_HOST: ${MYSQL_HOST}
-      MYSQL_NAME: ${MYSQL_NAME}
+      - type: bind
+        source: "/home/laisarva/hidralpress-prod"
+        target: "/home/laisarva/hidralpress-prod"
     ports:
       - "8000:8000"
       - "8953:8953"
     depends_on:
-      - db_hidralpress
+      db:
+        condition: service_healthy
+    links:
+      - db
 
 volumes:
-  db_hidralpress:
   .:
