--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,4 @@
 services:
-  db:
-    image: postgres:latest
-    user: postgres
-    environment:
-      POSTGRES_PASSWORD: "1234"
-    ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready", "-d", "postgres"]
-      interval: 30s
-      timeout: 60s
-      retries: 5
-      start_period: 80s
   api:
     container_name: 'api'
     build: .
@@ -20,16 +7,11 @@ services:
     volumes:
       - '.:/hidralpress'
       - type: bind
-        source: ${SOURCE}
-        target: ${TARGET}
+        source: /home/laisarva/hidralpress-prod
+        target: /hidralpress-prod
     ports:
       - "8000:8000"
       - "8953:8953"
-    depends_on:
-      db:
-        condition: service_healthy
-    links:
-      - db
 
 volumes:
   .:
