--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 Django==4.2
 djangorestframework==3.14.0
 Pillow==10.4.0
-python-dotenv==1.0.1
-psycopg2==2.9.9
 django-cors-headers==4.4.0
 django-extensions==3.2.3
 Werkzeug==3.0.3
 pyOpenSSL==24.2.1
+watchdog==5.0.3
